<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn9"
        android:layout_alignBottom="@id/btn9"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@id/btn9"
        android:layout_toRightOf="@id/btn9"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn8"
        android:layout_alignBottom="@id/btn8"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@id/btn8"
        android:layout_toRightOf="@id/btn8"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn9"
        android:layout_alignStart="@id/btn9"
        android:layout_alignLeft="@id/btn9"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/btn8"
        android:layout_alignLeft="@id/btn8"
        android:layout_alignTop="@id/btn6"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/btn7"
        android:layout_alignLeft="@id/btn7"
        android:layout_alignTop="@id/btn6"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn6"
        android:layout_alignStart="@id/btn6"
        android:layout_alignLeft="@id/btn6"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/btn5"
        android:layout_alignLeft="@id/btn5"
        android:layout_alignTop="@id/btn3"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/btn4"
        android:layout_alignLeft="@id/btn4"
        android:layout_alignTop="@id/btn2"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn3"
        android:layout_alignStart="@id/btn3"
        android:layout_alignLeft="@id/btn3"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn0" />

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/btn2"
        android:layout_alignLeft="@id/btn2"
        android:layout_alignTop="@id/btn0"
        android:text="@string/btnOpen" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/btn1"
        android:layout_alignLeft="@id/btn1"
        android:layout_alignTop="@id/btnOpen"
        android:text="@string/btnBack" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_above="@id/btn8"
        android:layout_alignEnd="@id/btn8"
        android:layout_alignRight="@id/btn8"
        android:layout_marginEnd="-26dp"
        android:layout_marginRight="-26dp"
        android:layout_marginBottom="130dp"
        android:text="@string/textview" />

</RelativeLayout>